[Qt][WK2] Child layers appear in wrong position when scrolling https://bugs.webkit.org/show_bug.cgi?id=77063

Reviewed by Simon Fraser.

When using the delegatesScrolling mode in FrameView, the compositor doesn't need
to control the special clip/scroll layers. Also, when we change that mode, we need to let
the compositor reset its backing-stores and rebuild them without scrolling/clipping.

This is tested by compositing tests, when run with Qt in touch mode.

* page/FrameView.cpp:
(WebCore::FrameView::delegatesScrollingDidChange):
(WebCore):
* page/FrameView.h:
(FrameView):
* platform/ScrollView.cpp:
(WebCore::ScrollView::setDelegatesScrolling):
* platform/ScrollView.h:
(WebCore::ScrollView::delegatesScrollingDidChange):
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresScrollLayer):


Canonical link: https://commits.webkit.org/94099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106121 268f45cc-cd09-0410-ab3c-d52691b4dbfc